2004-06-20  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkwidget.xml (allocation) (window) These attributes are
	writeable in PyGTK 2.4
	* pygtk-gtkwidget.xml
	* pygtk-gtk-functions.xml (widget_class_install_style_property)
	Add description of this PyGTK 2.4 function.

	* pygtk-gtkcontainer.xml
	* pygtk-gtk-functions.xml (container_class_list_child_properties)
	Add description of this PyGTK 2.4 function.

	* pygtk-gtkitemfactory.xml (Description) Add link to gtk.UIManager
	in the deprecation message. Thanks to Matthew Bull.

	* pygtk-gdkwindow.xml (set_user_data) (get_user_data) Add 
	description of these PyGTK 2.4 methods.

	* pygtk-gtknotebook.xml (insert_page) (set_tab_label) tab_label
	parameter can be None in PyGTK 2.4 and above.

	* pygtk-gtkwidget.xml ("drag-drop") Fix broken link.

	* pygtk-gtkaccelgroup.xml
	* pygtk-gtk-functions.xml (accel_groups_from_object) Add
	description of this PyGTK 2.4 function.

2004-06-14  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkwidget.xml ("drag-motion") ("drag-leave") ("drag-end")
	("drag-drop") ("drag-data-received") ("drag-data-get")
	("drag-data-delete") ("drag-begin") Update the documentation on
	these signals.

2004-06-13  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkicontheme.xml (Description) Fix typo and add exception
	handling to example. Thanks to Steve Chaplin.

	* pygtk-gtktextview.xml (Description) Add info about popup menu and
	selection clipboards.

2004-06-12  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkimage.xml ("pixbuf") Attribute contains a pixbuf not
	a pixmap. Thanks to Christian Reis.

2004-06-06  Johan Dahlin  <johan@gnome.org>

	* pygtk-gdkevent.xml : Proper documentation of all attributes, in
	sync with latest CVS. Remove the common attribute and only show
	them in the beginning of the event list.

2004-06-02  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkpaned.xml (pack1) (pack2) Change references to expand
	param to resize. Thanks to Toon Verstraelen. Fixes #143589
