@@ -36,6 +36,38 @@ linkend="constructor-gtkgenerictreemodel">gtk.GenericTreeModel</link></methodnam
   </refsect1>
 
   <refsect1>
+    <title>Properties</title>
+
+    <blockquote role="properties">
+      <informaltable pgwide="1" frame="none">
+	<tgroup cols="3">
+	  <colspec column="1" colwidth="1in"/>
+	  <colspec column="2" colwidth="1in"/>
+	  <colspec column="3" colwidth="4in"/>
+	  <tbody>
+
+	    <row valign="top">
+	      <entry>"leak-references"</entry>
+              <entry>Read-Write</entry>
+
+	      <entry>If <literal>TRUE</literal>, creating a <link
+linkend="class-gtktreeiter"><classname>gtk.TreeIter</classname></link> will
+bump the reference count of the object used as the internal row
+reference. This may cause a memory leak but will prevent problems with
+objects being destroyed while still in use in a <link
+linkend="class-gtktreeiter"><classname>gtk.TreeIter</classname></link>. Set
+this to <literal>FALSE</literal> only if the model saves the objects used in
+tree iters.</entry>
+	    </row>
+
+	  </tbody>
+	</tgroup>
+      </informaltable>
+    </blockquote>
+
+  </refsect1>
+
+  <refsect1>
     <title>Description</title>
 
     <para>The <link
