@@ -1,3 +1,8 @@
+2004-06-28  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-pygtkgenerictreemodel.xml (Properties) Add description
+	of the "leak-references" property.
+
 2004-06-20  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkwidget.xml (allocation) (window) These attributes are
